--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 02:09:00 PM</p>
+    <p class="lastupdate">09/13/2020 02:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.5&#176;F</td>
+        <td class="data">88.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.5&#176;F</td>
+        <td class="data">88.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.5&#176;F</td>
+        <td class="data">88.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">43.1&#176;F</td>
+        <td class="data">36.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">20%</td>
+        <td class="data">16%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.847 inHg (-0.067)</td>
+        <td class="data">29.842 inHg (-0.070)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph S (180&#176;)</td>
+        <td class="data">8 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.5&#176;F</td>
+        <td class="data">75.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,14 +237,14 @@
         <td class="data new_row hilo_day">
           <span title="01:39:22 PM">
             45.6</span><br/>
-          <span title="07:29:11 AM">
-            37.9</span>
+          <span title="02:13:00 PM">
+            36.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:39:22 PM (Sunday)">
             45.6</span><br/>
-          <span title="07:29:11 AM (Sunday)">
-            37.9</span>
+          <span title="02:13:00 PM (Sunday)">
+            36.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:09:59 AM">
             74</span><br/>
-          <span title="01:53:10 PM">
-            19</span>
+          <span title="02:12:50 PM">
+            16</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:09:59 AM (Sunday)">
             74</span><br/>
-          <span title="01:53:10 PM (Sunday)">
-            19</span>
+          <span title="02:12:50 PM (Sunday)">
+            16</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:49:01 AM">
             29.930</span><br/>
-          <span title="02:03:02 PM">
-            29.844</span>
+          <span title="02:13:02 PM">
+            29.842</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:49:01 AM (Sunday)">
             29.930</span><br/>
-          <span title="02:03:02 PM (Sunday)">
-            29.844</span>
+          <span title="02:13:02 PM (Sunday)">
+            29.842</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="02:04:26 PM">
-            12</span><br/>
-          204
+          <span title="02:09:42 PM">
+            14</span><br/>
+          191
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:04:26 PM (Sunday)">
-            12</span><br/>
-          204
+          <span title="02:09:42 PM (Sunday)">
+            14</span><br/>
+          191
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 04:18:20 PM">
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          175
+          178
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          175
+          178
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          293
+          291
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:07:02 PM">
-            75.5</span><br/>
+          <span title="02:11:02 PM">
+            75.6</span><br/>
           <span title="07:26:01 AM">
             71.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:07:02 PM (Sunday)">
-            75.5</span><br/>
+          <span title="02:11:02 PM (Sunday)">
+            75.6</span><br/>
           <span title="07:26:01 AM (Sunday)">
             71.6</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 23 hours, 22 minutes</td>
+      <td class="data">11 days, 23 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 23 hours, 22 minutes</td>
+      <td class="data">11 days, 23 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
