--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 02:34:00 PM</p>
+    <p class="lastupdate">09/13/2020 02:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.9&#176;F</td>
+        <td class="data">88.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.9&#176;F</td>
+        <td class="data">88.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.9&#176;F</td>
+        <td class="data">88.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">36.9&#176;F</td>
+        <td class="data">37.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">16%</td>
+        <td class="data">17%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.842 inHg (-0.065)</td>
+        <td class="data">29.843 inHg (-0.062)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph S (180&#176;)</td>
+        <td class="data">6 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="02:14:08 PM">
-            15</span><br/>
-          194
+          <span title="02:35:30 PM">
+            16</span><br/>
+          186
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:14:08 PM (Sunday)">
-            15</span><br/>
-          194
+          <span title="02:35:30 PM (Sunday)">
+            16</span><br/>
+          186
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 04:18:20 PM">
@@ -439,16 +439,16 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          0<br/>
-          185
+          1<br/>
+          186
         </td>
         <td class="data new_row hilo_week">
-          0<br/>
-          185
+          1<br/>
+          186
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          286
+          285
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:30:02 PM">
-            75.9</span><br/>
+          <span title="02:36:02 PM">
+            76.0</span><br/>
           <span title="07:26:01 AM">
             71.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:30:02 PM (Sunday)">
-            75.9</span><br/>
+          <span title="02:36:02 PM (Sunday)">
+            76.0</span><br/>
           <span title="07:26:01 AM (Sunday)">
             71.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 23 hours, 47 minutes</td>
+      <td class="data">11 days, 23 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 23 hours, 47 minutes</td>
+      <td class="data">11 days, 23 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
