--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 02:39:00 PM</p>
+    <p class="lastupdate">09/13/2020 02:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.3&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.3&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.3&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">37.9&#176;F</td>
+        <td class="data">38.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.843 inHg (-0.062)</td>
+        <td class="data">29.839 inHg (-0.063)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph SSW (202&#176;)</td>
+        <td class="data">9 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.9&#176;F</td>
+        <td class="data">76.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">33%</td>
       </tr>
     </tbody>
   </table>
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:49:01 AM">
             29.930</span><br/>
-          <span title="02:19:02 PM">
-            29.840</span>
+          <span title="02:39:02 PM">
+            29.839</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:49:01 AM (Sunday)">
             29.930</span><br/>
-          <span title="02:19:02 PM (Sunday)">
-            29.840</span>
+          <span title="02:39:02 PM (Sunday)">
+            29.839</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          186
+          185
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          186
+          185
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          285
+          283
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:36:02 PM">
-            76.0</span><br/>
+          <span title="02:43:02 PM">
+            76.1</span><br/>
           <span title="07:26:01 AM">
             71.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:36:02 PM (Sunday)">
-            76.0</span><br/>
+          <span title="02:43:02 PM (Sunday)">
+            76.1</span><br/>
           <span title="07:26:01 AM (Sunday)">
             71.6</span>
         </td>
@@ -507,14 +507,14 @@
         <td class="data new_row hilo_day">
           <span title="01:02:00 AM">
             36</span><br/>
-          <span title="02:03:02 PM">
-            34</span>
+          <span title="02:41:02 PM">
+            33</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:02:00 AM (Sunday)">
             36</span><br/>
-          <span title="02:03:02 PM (Sunday)">
-            34</span>
+          <span title="02:41:02 PM (Sunday)">
+            33</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 23 hours, 52 minutes</td>
+      <td class="data">11 days, 23 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 23 hours, 52 minutes</td>
+      <td class="data">11 days, 23 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
