--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 02:44:00 PM</p>
+    <p class="lastupdate">09/13/2020 02:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.4&#176;F</td>
+        <td class="data">88.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.4&#176;F</td>
+        <td class="data">88.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.4&#176;F</td>
+        <td class="data">88.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">38.0&#176;F</td>
+        <td class="data">39.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">17%</td>
+        <td class="data">18%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.839 inHg (-0.063)</td>
+        <td class="data">29.837 inHg (-0.064)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph S (180&#176;)</td>
+        <td class="data">10 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:49:01 AM">
             29.930</span><br/>
-          <span title="02:39:02 PM">
-            29.839</span>
+          <span title="02:44:02 PM">
+            29.837</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:49:01 AM (Sunday)">
             29.930</span><br/>
-          <span title="02:39:02 PM (Sunday)">
-            29.839</span>
+          <span title="02:44:02 PM (Sunday)">
+            29.837</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          185
+          186
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          185
+          186
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          283
+          282
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 23 hours, 57 minutes</td>
+      <td class="data">12 days, 0 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 23 hours, 57 minutes</td>
+      <td class="data">12 days, 0 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
