--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 03:14:00 PM</p>
+    <p class="lastupdate">09/13/2020 03:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.8&#176;F</td>
+        <td class="data">88.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.8&#176;F</td>
+        <td class="data">88.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.8&#176;F</td>
+        <td class="data">88.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.8&#176;F</td>
+        <td class="data">39.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.837 inHg (-0.050)</td>
+        <td class="data">29.838 inHg (-0.048)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph SSW (202&#176;)</td>
+        <td class="data">9 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">32%</td>
       </tr>
     </tbody>
   </table>
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          193
+          194
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          193
+          194
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          276
+          274
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -507,14 +507,14 @@
         <td class="data new_row hilo_day">
           <span title="01:02:00 AM">
             36</span><br/>
-          <span title="02:41:02 PM">
-            33</span>
+          <span title="03:14:02 PM">
+            32</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:02:00 AM (Sunday)">
             36</span><br/>
-          <span title="02:41:02 PM (Sunday)">
-            33</span>
+          <span title="03:14:02 PM (Sunday)">
+            32</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 0 hours, 27 minutes</td>
+      <td class="data">12 days, 0 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 0 hours, 27 minutes</td>
+      <td class="data">12 days, 0 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
