--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 03:29:00 PM</p>
+    <p class="lastupdate">09/13/2020 03:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.5&#176;F</td>
+        <td class="data">88.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.5&#176;F</td>
+        <td class="data">88.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.5&#176;F</td>
+        <td class="data">88.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.6&#176;F</td>
+        <td class="data">40.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">18%</td>
+        <td class="data">19%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.840 inHg (-0.042)</td>
+        <td class="data">29.839 inHg (-0.043)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph S (180&#176;)</td>
+        <td class="data">10 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.9&#176;F</td>
+        <td class="data">77.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          272
+          271
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:24:02 PM">
-            76.9</span><br/>
+          <span title="03:29:02 PM">
+            77.0</span><br/>
           <span title="07:26:01 AM">
             71.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:24:02 PM (Sunday)">
-            76.9</span><br/>
+          <span title="03:29:02 PM (Sunday)">
+            77.0</span><br/>
           <span title="07:26:01 AM (Sunday)">
             71.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 0 hours, 42 minutes</td>
+      <td class="data">12 days, 0 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 0 hours, 42 minutes</td>
+      <td class="data">12 days, 0 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
