--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 04:04:00 PM</p>
+    <p class="lastupdate">09/13/2020 04:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">86.2&#176;F</td>
+        <td class="data">86.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">86.2&#176;F</td>
+        <td class="data">86.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">86.2&#176;F</td>
+        <td class="data">86.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.4&#176;F</td>
+        <td class="data">40.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.841 inHg (-0.028)</td>
+        <td class="data">29.837 inHg (-0.030)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph SSW (202&#176;)</td>
+        <td class="data">9 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.1&#176;F</td>
+        <td class="data">78.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          194
+          193
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          194
+          193
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          263
+          262
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:02:02 PM">
-            78.1</span><br/>
+          <span title="04:07:02 PM">
+            78.3</span><br/>
           <span title="07:26:01 AM">
             71.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:02:02 PM (Sunday)">
-            78.1</span><br/>
+          <span title="04:07:02 PM (Sunday)">
+            78.3</span><br/>
           <span title="07:26:01 AM (Sunday)">
             71.6</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 1 hour, 17 minutes</td>
+      <td class="data">12 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 1 hour, 17 minutes</td>
+      <td class="data">12 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
