--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 04:24:00 PM</p>
+    <p class="lastupdate">09/13/2020 04:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">86.2&#176;F</td>
+        <td class="data">86.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">86.2&#176;F</td>
+        <td class="data">86.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">86.2&#176;F</td>
+        <td class="data">86.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">41.7&#176;F</td>
+        <td class="data">40.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">21%</td>
+        <td class="data">20%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.844 inHg (-0.013)</td>
+        <td class="data">29.847 inHg (-0.010)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph S (180&#176;)</td>
+        <td class="data">5 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.8&#176;F</td>
+        <td class="data">79.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          259
+          258
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:20:02 PM">
-            78.8</span><br/>
+          <span title="04:28:02 PM">
+            79.0</span><br/>
           <span title="07:26:01 AM">
             71.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:20:02 PM (Sunday)">
-            78.8</span><br/>
+          <span title="04:28:02 PM (Sunday)">
+            79.0</span><br/>
           <span title="07:26:01 AM (Sunday)">
             71.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 1 hour, 37 minutes</td>
+      <td class="data">12 days, 1 hour, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 1 hour, 37 minutes</td>
+      <td class="data">12 days, 1 hour, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
